--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,4 +1,5 @@
 {% extends 'blog/base.html' %}
+{% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
         <form method="POST">
@@ -7,7 +8,9 @@
             <!-- This is a security feature to prevent Cross Site Request Forgery -->
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today!</legend>
-                {{ form.as_p }}
+                {{ form|crispy }}
+                {#                crispy is a method that will render the form in a more user-friendly way. without this method, the form will not be rendered.#}
+
 {#                as_p is a method that will render all the fields in the form as paragraph elements. without this method, the form will not be rendered.#}
                 <!-- This will render all the fields in the form -->
             </fieldset>
