--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -7,7 +7,7 @@
             {% csrf_token %}
             <!-- This is a security feature to prevent Cross Site Request Forgery -->
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today!</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 {{ form|crispy }}
                 {#                crispy is a method that will render the form in a more user-friendly way. without this method, the form will not be rendered.#}
 
@@ -15,12 +15,12 @@
                 <!-- This will render all the fields in the form -->
             </fieldset>
             <div class="form-group">
-                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+                <button class="btn btn-outline-info" type="submit">Login</button>
             </div>
         </form>
         <div class="border-top pt-3">
             <small class="text-muted">
-                Already have an account? <a href="{% url 'login' %}">Sign In</a>
+                New here? <a href="{% url 'register' %}">Sign Up Now!</a>
             </small>
             {#            This will redirect to the login page#}
         </div>
