--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,4 +1,5 @@
 {% extends "blog/base.html" %}
+{% load crispy_forms_filters %}
 {% load crispy_forms_tags %}
 {% block content %}
     <div class="content-section">
@@ -11,6 +12,23 @@
           <p class="text-secondary">{{ user.email }}</p>
         </div>
       </div>
-      <!-- FORM HERE -->
+        <form method="POST" enctype="multipart/form-data">
+            <!-- enctype="multipart/form-data" is required to upload files -->
+            <!-- This form will be submitted to the same URL -->
+            {% csrf_token %}
+            <!-- This is a security feature to prevent Cross Site Request Forgery -->
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Profile Info</legend>
+                {{ u_form|crispy }}
+                {{ p_form|crispy }}
+                {#                crispy is a method that will render the form in a more user-friendly way. without this method, the form will not be rendered.#}
+
+{#                as_p is a method that will render all the fields in the form as paragraph elements. without this method, the form will not be rendered.#}
+                <!-- This will render all the fields in the form -->
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Update</button>
+            </div>
+        </form>
     </div>
 {% endblock content %}
